# vardescribe

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
src/vardescribe/: core.py
tests/: manual_test.py  test.py  test_core.py
