# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vardescribe"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A small utility to describe variables."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/your-username/vardescribe"
Issues = "https://github.com/your-username/vardescribe/issues"